--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,9 @@ on:
                 description: "Commit message for the update"
                 required: true
 
+permissions:
+    contents: write
+
 jobs:
     update-file:
         runs-on: ubuntu-latest
