--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "readnupdate-test",
   "version": "1.0.0",
   "main": "actions.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build actions.js -o dist"
+    "build": "ncc build src/actions.js -o dist"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,9 @@
   "description": "",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "dotenv": "^16.4.5",
+    "openai": "^4.68.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.2"
