--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build src/actions.js -o dist"
+    "build": "ncc build src/action.js -o dist"
   },
   "keywords": [],
-  "author": "",
+  "author": "Rihan Hidayat",
   "license": "ISC",
   "description": "",
   "dependencies": {
