--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build src/action.js -o dist"
+    "build": "ncc build src/actions.js -o dist"
   },
   "keywords": [],
   "author": "Rihan Hidayat",
