--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "readnupdate-test",
   "version": "1.0.0",
   "main": "actions.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "ncc build src/actions.js -o dist"
