--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "readnupdate-test",
   "version": "1.0.0",
-  "main": "actions.js",
+  "main": "dist/actions.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build src/actions.js -o dist"
+    "build": "esbuild src/actions.js --bundle --platform=node --outfile=dist/actions.js"
   },
   "keywords": [],
   "author": "Rihan Hidayat",
@@ -18,6 +18,6 @@
     "openai": "^4.68.0"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.38.2"
+    "esbuild": "^0.19.0"
   }
 }
