--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "readnupdate-test",
   "version": "1.0.0",
   "main": "dist/actions.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild src/actions.js --bundle --platform=node --outfile=dist/actions.js"
+    "build": "ncc build src/actions.js -o dist"
   },
   "keywords": [],
   "author": "Rihan Hidayat",
@@ -18,6 +17,6 @@
     "openai": "^4.68.0"
   },
   "devDependencies": {
-    "esbuild": "^0.19.0"
+    "@vercel/ncc": "^0.38.2"
   }
 }
