--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,6 +22,9 @@ jobs:
 
             - name: Update file
               uses: ./ # Uses the action in the root directory
+              env:
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+                  ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   file-path: ${{ github.event.inputs.file-path }}
