--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,8 @@
-name: 'Assistant File Update'
-description: 'Update a file in the repository with content processed by an AI assistant'
+name: 'Failed Implementation Fix'
+description: 'Update implementation file with AI-assisted fix based on failed test'
 inputs:
   github-token:
     description: 'GitHub token for repository access'
-    required: true
-  file-path:
-    description: 'Path to the file to update'
     required: true
   commit-message:
     description: 'Commit message for the update'
