--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,11 +12,49 @@ permissions:
     contents: write
 
 jobs:
+
+    run-tests:
+        strategy:
+            fail-fast: false
+        runs-on: ubuntu-latest
+        outputs:
+            pytest_failed: ${{ steps.pytest_status.outputs.pytest_failed }}
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+            
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                python-version: 3.10.4
+
+            - name: Install dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements.txt
+
+            - name: Run pytest
+              run: |
+                pytest
+              continue-on-error: true
+              id: pytest_result
+
+            - name: Check pytest status
+              id: pytest_status
+              run: |
+                if [[ "${{ steps.pytest_result.outcome }}" == "failure" ]]; then
+                  echo "pytest_failed=true" >> $GITHUB_OUTPUT
+                else
+                  echo "pytest_failed=false" >> $GITHUB_OUTPUT
+                fi
+
     update-implementation:
+        needs: run-tests
+        if: ${{ needs.run-tests.outputs.pytest_failed == 'true' }}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
 
             - name: Update implementation file
               uses: ./ # Uses the action in the root directory
