--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,7 +34,7 @@ jobs:
                 pip install -r requirements.txt
 
             - name: Ensure pytest_report directory exists
-              run: mkdir -p src/pytest_report
+              run: mkdir -p pytest_report
 
             - name: Run pytest
               run: |
@@ -55,7 +55,7 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                 name: pytest-report
-                path: src/pytest_report/report.json
+                path: pytest_report/report.json
 
     update-implementation:
         needs: run-tests
@@ -69,7 +69,7 @@ jobs:
               uses: actions/download-artifact@v3
               with:
                 name: pytest-report
-                path: ./src/pytest_report
+                path: pytest_report
 
             - name: Update implementation file
               uses: ./ # Uses the action in the root directory
