--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,10 +52,10 @@ jobs:
                 fi
 
             - name: Upload pytest report artifact
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
                 name: pytest-report
-                path: pytest_report/report.json
+                path: src/pytest_report/report.json
 
     update-implementation:
         needs: run-tests
@@ -66,7 +66,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Download pytest report artifact
-              uses: actions/download-artifact@v3
+              uses: actions/download-artifact@v4
               with:
                 name: pytest-report
                 path: pytest_report
