--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,12 +1,15 @@
 name: Update Failed Implementation
 
 on:
-    workflow_dispatch:
-        inputs:
-            commit-message:
-                description: "Commit message for the update"
-                required: true
-                default: "fix: Update implementation file with AI-assisted fix"
+    # workflow_dispatch:
+    #     inputs:
+    #         commit-message:
+    #             description: "Commit message for the update"
+    #             required: true
+    #             default: "fix: Update implementation file with AI-assisted fix"
+    pull_request:
+        branches:
+            - main
 
 permissions:
     contents: write
@@ -72,7 +75,7 @@ jobs:
                 path: pytest_report
 
             - name: Update implementation file
-              uses: ./ # Uses the action in the root directory
+              uses: ./ 
               env:
                   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
                   ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
