--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,21 +1,15 @@
 name: Update Failed Implementation
 
 on:
-    # workflow_dispatch:
-    #     inputs:
-    #         commit-message:
-    #             description: "Commit message for the update"
-    #             required: true
-    #             default: "fix: Update implementation file with AI-assisted fix"
     pull_request:
         branches:
             - main
 
 permissions:
     contents: write
+    pull-requests: write
 
 jobs:
-
     run-tests:
         strategy:
             fail-fast: false
@@ -74,11 +68,33 @@ jobs:
                 name: pytest-report
                 path: pytest_report
 
-            - name: Update implementation file
+            - name: Create AI Fix Branch
+              id: create-branch
+              run: |
+                BRANCH_NAME="${{ github.head_ref || github.ref_name }}-AIFix-$(date +%Y-%m-%d)"
+                git checkout -b $BRANCH_NAME
+                echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+
+            - name: Prepare AI-Assisted Fix
               uses: ./ 
               env:
                   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
                   ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
-                  commit-message: "fix: Update implementation file with AI-assisted fix"
+                  commit-message: "fix: Prepare AI-assisted implementation update"
+                  base-branch: ${{ steps.create-branch.outputs.branch_name }}
+
+            - name: Push New Branch
+              run: |
+                git push -u origin ${{ steps.create-branch.outputs.branch_name }}
+
+            # - name: Create Pull Request
+            #   env:
+            #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            #   run: |
+            #     gh pr create \
+            #       --base ${{ github.event.pull_request.base.ref }} \
+            #       --head ${{ steps.create-branch.outputs.branch_name }} \
+            #       --title "AI-Assisted Fix for Failed Tests" \
+            #       --body "Automated AI-generated fix based on test failures"
