--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -87,6 +87,8 @@ jobs:
 
             - name: Push New Branch
               run: |
+                git fetch origin
+                git pull origin ${{ steps.create-branch.outputs.branch_name }} --rebase
                 git push -u origin ${{ steps.create-branch.outputs.branch_name }}
 
             # - name: Create Pull Request
