--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -87,9 +87,9 @@ jobs:
 
             - name: Push New Branch
               run: |
-                  git config user.name github-actions
-                  git config user.email github-actions@github.com
-                  git push -f origin ${{ steps.create-branch.outputs.branch_name }}
+                  git config user.name "github-actions"
+                  git config user.email "actions@github.com"
+                  git push origin ${{ steps.create-branch.outputs.branch_name }}
 
             # - name: Create Pull Request
             #   env:
