--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -89,7 +89,7 @@ jobs:
               run: |
                   git config user.name "github-actions"
                   git config user.email "actions@github.com"
-                  git push origin ${{ steps.create-branch.outputs.branch_name }}
+                  git push --force origin ${{ steps.create-branch.outputs.branch_name }}
 
             # - name: Create Pull Request
             #   env:
