--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -77,12 +77,13 @@ jobs:
             - name: Update implementation file
               uses: ./ # Uses the action in the root directory
               env:
-                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-                  ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
+                OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+                ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
               with:
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
-                  commit-message: "AI-assisted fix for failed tests"
-
+                github-token: ${{ secrets.GITHUB_TOKEN }}
+                commit-message: "AI-assisted fix for failed tests"
+                target-branch: ai-fix-${{ github.event.pull_request.number }}
+      
             - name: Push new branch
               run: |
                 git config user.name github-actions
