--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,6 +16,7 @@ jobs:
         runs-on: ubuntu-latest
         outputs:
             pytest_failed: ${{ steps.pytest_status.outputs.pytest_failed }}
+            ai_fix_branch: ${{ steps.create_branch.outputs.branch_name }}
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
@@ -55,7 +56,7 @@ jobs:
                 branch_name="ai-fix-${{ github.event.pull_request.number }}"
                 git checkout -b $branch_name
                 git push -u origin $branch_name
-                echo "branch_name=$branch_name" >> $GITHUB_OUTPUT
+                echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
 
             - name: Upload pytest report artifact
               uses: actions/upload-artifact@v4
