--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -58,6 +58,11 @@ jobs:
                 git push -u origin $branch_name
                 echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
 
+            - name: Debug Outputs
+              run: |
+                  echo "pytest_failed: ${{ steps.pytest_status.outputs.pytest_failed }}"
+                  echo "ai_fix_branch: ${{ steps.create_branch.outputs.branch_name }}"
+
             - name: Upload pytest report artifact
               uses: actions/upload-artifact@v4
               with:
