--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,59 +40,66 @@ jobs:
               continue-on-error: true
               id: pytest_result
 
-            - name: Check pytest status
+            - name: Verify testing status
               id: pytest_status
               run: |
                 if [[ "${{ steps.pytest_result.outcome }}" == "failure" ]]; then
-                  echo "pytest_failed=true" >> $GITHUB_OUTPUT
-                  echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
-                else
-                  echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
+                  echo "pytest_failed=true" >> $GITHUB_ENV
+                  echo "ai_fix_branch=ai-fix-${{ github.event.pull_request.number }}" >> $GITHUB_ENV
                 fi
 
-            - name: Create AI Fix Branch
-              id: create_branch
-              if: ${{ steps.pytest_status.outputs.pytest_failed == 'true' }}
+            - name: Print pytest status
               run: |
-                branch_name="ai-fix-${{ github.event.pull_request.number }}"
-                git checkout -b $branch_name
-                git push -u origin $branch_name
-                echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
+                echo "pytest_failed: ${{ steps.pytest_status.outputs.pytest_failed }}"
+                echo "ai_fix_branch: $ai_fix_branch"
 
-            - name: Debug Outputs
-              run: |
-                  echo "pytest_failed: ${{ steps.pytest_status.outputs.pytest_failed }}"
-                  echo "ai_fix_branch: ${{ steps.create_branch.outputs.branch_name }}"
+            # - name: Check pytest status
+            #   id: pytest_status
+            #   run: |
+            #     if [[ "${{ steps.pytest_result.outcome }}" == "failure" ]]; then
+            #       echo "pytest_failed=true" >> $GITHUB_OUTPUT
+            #     else
+            #       echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
+            #     fi
 
-            - name: Upload pytest report artifact
-              uses: actions/upload-artifact@v4
-              with:
-                name: pytest-report
-                path: src/pytest_report/report.json
+            # - name: Create AI Fix Branch
+            #   id: create_branch
+            #   if: ${{ steps.pytest_status.outputs.pytest_failed == 'true' }}
+            #   run: |
+            #     branch_name="ai-fix-${{ github.event.pull_request.number }}"
+            #     git checkout -b $branch_name
+            #     git push -u origin $branch_name
+            #     echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
 
-    update-implementation:
-        needs: run-tests
-        if: ${{ needs.run-tests.outputs.pytest_failed == 'true' }}
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout AI fix branch
-              uses: actions/checkout@v4
-              with:
-                ref: ${{ needs.run-tests.outputs.ai_fix_branch }}
-                fetch-depth: 0  # Important: fetch all branches and history
+            # - name: Upload pytest report artifact
+            #   uses: actions/upload-artifact@v4
+            #   with:
+            #     name: pytest-report
+            #     path: src/pytest_report/report.json
 
-            - name: Download pytest report artifact
-              uses: actions/download-artifact@v4
-              with:
-                name: pytest-report
-                path: pytest_report
+    # update-implementation:
+    #     needs: run-tests
+    #     if: ${{ needs.run-tests.outputs.pytest_failed == 'true' }}
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - name: Checkout AI fix branch
+    #           uses: actions/checkout@v4
+    #           with:
+    #             ref: ${{ needs.run-tests.outputs.ai_fix_branch }}
+    #             fetch-depth: 0  # Important: fetch all branches and history
 
-            - name: Update implementation file
-              uses: ./ # Uses the action in the root directory
-              env:
-                OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-                ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
-              with:
-                target-branch: ${{ needs.run-tests.outputs.ai_fix_branch }}
-                github-token: ${{ secrets.GITHUB_TOKEN }}
-                commit-message: "AI-assisted fix for failed tests"
+    #         - name: Download pytest report artifact
+    #           uses: actions/download-artifact@v4
+    #           with:
+    #             name: pytest-report
+    #             path: pytest_report
+
+    #         - name: Update implementation file
+    #           uses: ./ # Uses the action in the root directory
+    #           env:
+    #             OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+    #             ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
+    #           with:
+    #             target-branch: ${{ needs.run-tests.outputs.ai_fix_branch }}
+    #             github-token: ${{ secrets.GITHUB_TOKEN }}
+    #             commit-message: "AI-assisted fix for failed tests"
