--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -92,6 +92,6 @@ jobs:
                 OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
                 ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
               with:
-                target-branch: ${{ needs.run-tests.outputs.ai_fix_branch }}
+                target-branch: ${{ env.ai_fix_branch }}
                 github-token: ${{ secrets.GITHUB_TOKEN }}
                 commit-message: "AI-assisted fix for failed tests"
