--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -46,7 +46,7 @@ jobs:
                 if [[ "${{ steps.pytest_result.outcome }}" == "failure" ]]; then
                   echo "pytest_failed=true" >> $GITHUB_OUTPUT
                 else
-                  echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
+                  echo "pytest_failed=false" >> $GITHUB_OUTPUT
                 fi
 
             - name: Create AI Fix Branch
@@ -87,6 +87,6 @@ jobs:
                 OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
                 ASSISTANT_ID: ${{ secrets.ASSISTANT_ID }}
               with:
-                target-branch: $ai_fix_branch
+                target-branch: ${{ env.ai_fix_branch }}
                 github-token: ${{ secrets.GITHUB_TOKEN }}
                 commit-message: "AI-assisted fix for failed tests"
