--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,12 +56,12 @@ jobs:
                 branch_name="ai-fix-${{ github.event.pull_request.number }}"
                 git checkout -b $branch_name
                 git push -u origin $branch_name
-                echo "ai_fix_branch=$branch_name" >> $GITHUB_OUTPUT
+                echo "ai_fix_branch=$branch_name" >> $GITHUB_ENV
 
             - name: Debug Outputs
               run: |
                   echo "pytest_failed: ${{ steps.pytest_status.outputs.pytest_failed }}"
-                  echo "ai_fix_branch: ${{ steps.create_branch.outputs.branch_name }}"
+                  echo "ai_fix_branch: $ai_fix_branch"
 
             - name: Upload pytest report artifact
               uses: actions/upload-artifact@v4
