--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -64,7 +64,7 @@ jobs:
             - name: Debug Outputs
               run: |
                   echo "pytest_failed: ${{ steps.pytest_status.outputs.pytest_failed }}"
-                  echo "ai_fix_branch: ${{ steps.create_branch.outputs.branch_name }}"
+                  echo "ai_fix_branch: ${{ steps.create_branch.outputs.ai_fix_branch }}"
 
             - name: Upload pytest report artifact
               uses: actions/upload-artifact@v4
