--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,6 +60,12 @@ jobs:
                 echo "branch_name=$branch_name" >> $GITHUB_OUTPUT
                 cat $GITHUB_OUTPUT
 
+            - name : Upload branch name artifact
+              uses: actions/upload-artifact@v4
+              with:
+                name: ai-fix-branch
+                path: ai_fix_branch.txt
+
             - name: Debug Outputs
               run: |
                   echo "pytest_failed: ${{ steps.pytest_status.outputs.pytest_failed }}"
@@ -81,6 +87,11 @@ jobs:
               with:
                 ref: ${{ needs.run-tests.outputs.ai_fix_branch }}
                 fetch-depth: 0  # Important: fetch all branches and history
+
+            - name: Download ai-fix-branch artifact
+              uses: actions/download-artifact@v4
+              with:
+                name: ai-fix-branch
 
             - name: Download pytest report artifact
               uses: actions/download-artifact@v4
