--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -105,3 +105,8 @@ jobs:
                 target-branch: ${{ steps.read_branch.outputs.target_branch }}
                 github-token: ${{ secrets.GITHUB_TOKEN }}
                 commit-message: "AI-assisted fix for failed tests"
+
+            - name: Close Original Pull Request
+              run: |
+                gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+                gh pr close ${{ github.event.pull_request.number }} --comment "Closing this PR as an AI-assisted fix has been created in branch ${{ steps.read_branch.outputs.target_branch }}. Please review the new changes there."
